# hlpr-dspy-agent

./: .gitignore  .pre-commit-config.yaml  CODEBASE_GUIDE.md  MIGRATION.md  README.md  action-items-meeting.txt  demo_sample.md  meeting-participants.txt  meeting-summary.json  meeting_notes.txt  output-meeting.txt  planning-meeting.txt  pyproject.toml  pytest.ini  standup-notes.txt  test_document.txt  test_summary.md
.github/: .copilot-instructions.md  copilot-instructions.md
.github/prompts/: constitution.prompt.md
.github/workflows/: ci.yml
.hlpr/: saved_commands.json
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/scripts/bash/: demo_dspy.py
.specify/templates/: plan-template.md
config/: PROVIDERS.md  __init__.py  models.py  settings.py
docs/: local-dspy.md  save-summaries.md
documents/: future_features_modularization.md
examples/: email_example.py
scripts/: demo_document_processing.py  demo_dspy.py  run_documents_summarizer.py  run_workflow.py
specs/001-hlpr-ai-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-document-article-summarization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cli-tui-of/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-guided-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-core-configuration-and-ui-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-save-document-summaries/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-title-interactive-save/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-update-config-workflow/: code-review-3.1-3.3.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/core/: __init__.py  base.py  exceptions.py  models.py
src/hlpr/: __about__.py  __init__.py  config.py  config_helpers.py  exceptions.py  logging_utils.py
src/hlpr/api/: __init__.py  (+6 more)
src/integrations/: anthropic_client.py  email_client.py  google_client.py  ollama_client.py  openai_client.py  openrouter_client.py  provider_manager.py  storage.py
src/optimization/: evaluators.py  optimizers.py
src/utils/: document_loader.py  helpers.py  logging.py
src/workflows/: base_workflow.py
tests/: README.md  conftest.py  test_document_summarizer.py  test_email_categorizer.py  test_ollama_client.py
tests/contract/: test_cli_batch_processing.py  test_cli_config.py  test_cli_custom_path.py  test_cli_documents_batch.py  test_cli_documents_error_summary.py  test_cli_documents_summary_json.py  test_cli_email_accounts.py  test_cli_email_process.py  test_cli_enhanced_document.py  test_cli_error_handling.py  test_cli_guided_enhanced.py  test_cli_guided_mode.py  test_cli_interactive_options.py  test_cli_min_free_mb.py  test_cli_organized_storage.py  test_cli_providers.py  test_cli_save_behavior.py  test_cli_summarize_document.py  test_cli_summarize_meeting.py  test_config_edit_command.py  test_config_loader_contract.py  test_config_recovery_contract.py  test_config_reset_command.py  test_config_reset_contract.py  test_config_setup_command.py  test_config_show_command.py  test_config_validate_command.py  test_config_validator_contract.py  test_email_accounts_get.py  test_email_accounts_post.py  test_email_process.py  test_environment_override_contract.py  test_jobs.py  test_partial_output_atomic.py  test_performance_contract.py  test_platform_defaults_contract.py  test_providers.py  test_summarize_document.py  test_summarize_meeting.py  test_summarize_temperature.py  (+1 more)
tests/integration/: __init__.py  test_api_summarize_demo.py  test_cli_interactive_output.py  test_cli_interactive_progress_lifecycle.py  test_cli_phase_workflow.py  test_cli_renderers.py  test_config_file_creation.py  test_config_reset.py  test_corruption_recovery.py  test_cross_platform_permissions.py  test_document_performance.py  test_document_workflow.py  test_dspy_timeout.py  test_email_workflow.py  test_environment_override.py  test_file_validation.py  test_first_run_setup.py  test_fresh_installation.py  test_guided_workflow.py  test_guided_workflow_complete.py  test_interactive_setup.py  test_meeting_workflow.py  test_output_formatting.py  test_provider_workflow.py  test_rich_progress.py  test_setup_writes_templates.py  test_storage_errors.py  test_template_management.py  test_ui_strings_validation.py  test_validation_errors.py
tests/unit/: test_api_credentials.py  test_atomic_write.py  test_batch_interrupt_partial.py  test_batch_partial_failure.py  test_chunker.py  test_cli_37_interrupt_and_suggestions.py  test_cli_batch.py  test_cli_exit_codes.py  test_cli_interactive.py  test_cli_models.py  test_cli_phase_tracker.py  test_cli_renderers.py  test_cli_rich_display.py  test_cli_run_with_phases.py  test_cli_save_error_handling.py  test_cli_save_flag_collision.py  test_cli_save_prompt_collision.py  test_cli_save_prompt_decline.py  test_cli_save_prompt_default.py  test_cli_save_prompt_json.py  test_cli_save_prompt_non_tty.py  test_cli_validators.py  test_config.py  test_config_edge_cases.py  test_config_env_parsing.py  test_config_file_ops.py  test_config_loader_migration.py  test_config_migration.py  test_config_package_exports.py  test_config_performance.py  test_config_support_utils.py  test_config_validation.py  test_configuration_manager.py  test_configuration_state.py  test_document_parser.py  test_dspy_error_mapping.py  test_dspy_verifier.py  test_dspy_verify.py  test_env_parsing.py  test_exceptions.py  (+26 more)
(+76 files in other folders)
