[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlpr"
dynamic = ["version"]
description = "Personal AI Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioimaplib>=2.0.1",
    "dspy>=3.0.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "keyring>=25.6.0",
    "pydantic>=2.11.7",
    "pypdf>=4.0.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.6",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[project.scripts]
hlpr = "hlpr.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "PLR2004"]  # Ignore assert and magic values in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "PLC0415"]  # Allow magic numbers and imports anywhere in tests
"src/hlpr/document/**/*.py" = ["S101", "PTH123", "S603"]  # Document processing: allow asserts, file paths, subprocess calls

[tool.hatch.version]
path = "src/hlpr/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hlpr"]
